refactor: sonarqube problems